# legacy_talos_machinelearning

./: CMakeLists.txt  README.md  install_unsupervised_dataset.sh  package.xml
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: talos_machinelearning.pc
devel/lib/talos_machinelearning/: general_object_recognition
include/talos_machinelearning/: ConfusionMatrix.h  Dataset.h  Experiment.h  FeatureExtractor.h  GeneralObjectRecognitionModel.h  Model.h  ModelParams.h  Normalization.h  PerformanceMeasure.h  ROC.h  SURFFeatureExtractor.h  SupervisedFeatures.h  UnsupervisedFeatures.h  daspr_vision.h
src/: ConfusionMatrix.cpp  Dataset.cpp  Experiment.cpp  FeatureExtractor.cpp  GeneralObjectRecognitionModel.cpp  GeneralObjectRecognizer.cpp  Normalization.cpp  ObjectClassification.cpp  ObjectTrainer.cpp  PerformanceMeasure.cpp  ROC.cpp  SupervisedFeatures.cpp  UnsupervisedFeatures.cpp
